--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "livewire/flux": "^1.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
         "spatie/laravel-permission": "^6.10"
